Further work on UI design (still incomplete)